// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`It should render Pagination component correctly 1`] = `
.c0 {
  margin: 0 auto;
  float: right;
}

.c0 li {
  float: left;
  margin-bottom: 32px;
  width: 32px;
  height: 32px;
}

.c1 {
  color: #ECECEC;
  background: #065a76;
  pointer-events: none;
  display: block;
  text-align: center;
  line-height: 32px;
  font-size: 1.5rem;
}

.c1:hover {
  background: #065a76;
}

.c2 {
  color: #388ca8;
  text-decoration: none;
}

.c2:hover {
  color: #065a76;
}

@media (max-width:1200px) {
  .c0 {
    float: none;
  }
}

@media (max-width:1200px) {
  .c0 li {
    margin-bottom: 0;
    width: calc(100% / 8);
  }
}

<div>
  <ul
    className="c0"
  >
    <li>
      <a
        className="c1 c2"
        onClick={[Function]}
        style={Object {}}
      >
        1
      </a>
    </li>
  </ul>
</div>
`;

exports[`It should render Pagination component with both next page link and previous page link correctly 1`] = `
.c0 {
  margin: 0 auto;
  float: right;
}

.c0 li {
  float: left;
  margin-bottom: 32px;
  width: 32px;
  height: 32px;
}

.c3 {
  color: #ECECEC;
  background: #065a76;
  pointer-events: none;
  display: block;
  text-align: center;
  line-height: 32px;
  font-size: 1.5rem;
}

.c3:hover {
  background: #065a76;
}

.c1 {
  color: #ECECEC;
  background: #388ca8;
  pointer-events: auto;
  display: block;
  text-align: center;
  line-height: 32px;
  font-size: 1.5rem;
}

.c1:hover {
  background: #065a76;
}

.c2 {
  color: #388ca8;
  text-decoration: none;
}

.c2:hover {
  color: #065a76;
}

@media (max-width:1200px) {
  .c0 {
    float: none;
  }
}

@media (max-width:1200px) {
  .c0 li {
    margin-bottom: 0;
    width: calc(100% / 8);
  }
}

<div>
  <ul
    className="c0"
  >
    <li>
      <a
        className="c1 c2"
        onClick={[Function]}
        style={Object {}}
      >
        ←
      </a>
    </li>
    <li>
      <a
        className="c1 c2"
        onClick={[Function]}
        style={Object {}}
      >
        1
      </a>
    </li>
    <li>
      <a
        className="c3 c2"
        onClick={[Function]}
        style={Object {}}
      >
        2
      </a>
    </li>
    <li>
      <a
        className="c1 c2"
        onClick={[Function]}
        style={Object {}}
      >
        3
      </a>
    </li>
    <li>
      <a
        className="c1 c2"
        onClick={[Function]}
        style={Object {}}
      >
        →
      </a>
    </li>
  </ul>
</div>
`;

exports[`It should render Pagination component with previous page link correctly 1`] = `
.c0 {
  margin: 0 auto;
  float: right;
}

.c0 li {
  float: left;
  margin-bottom: 32px;
  width: 32px;
  height: 32px;
}

.c3 {
  color: #ECECEC;
  background: #065a76;
  pointer-events: none;
  display: block;
  text-align: center;
  line-height: 32px;
  font-size: 1.5rem;
}

.c3:hover {
  background: #065a76;
}

.c1 {
  color: #ECECEC;
  background: #388ca8;
  pointer-events: auto;
  display: block;
  text-align: center;
  line-height: 32px;
  font-size: 1.5rem;
}

.c1:hover {
  background: #065a76;
}

.c2 {
  color: #388ca8;
  text-decoration: none;
}

.c2:hover {
  color: #065a76;
}

@media (max-width:1200px) {
  .c0 {
    float: none;
  }
}

@media (max-width:1200px) {
  .c0 li {
    margin-bottom: 0;
    width: calc(100% / 8);
  }
}

<div>
  <ul
    className="c0"
  >
    <li>
      <a
        className="c1 c2"
        onClick={[Function]}
        style={Object {}}
      >
        ←
      </a>
    </li>
    <li>
      <a
        className="c1 c2"
        onClick={[Function]}
        style={Object {}}
      >
        1
      </a>
    </li>
    <li>
      <a
        className="c1 c2"
        onClick={[Function]}
        style={Object {}}
      >
        2
      </a>
    </li>
    <li>
      <a
        className="c3 c2"
        onClick={[Function]}
        style={Object {}}
      >
        3
      </a>
    </li>
  </ul>
</div>
`;
